 * Zafu is not a separate gem anymore.
 * Added simple support for JS Tags (used to define grid colums).
 * Enabled rebuilding of templates on partial query.
 * Enabled 'hash' property type.
 * Enabled javascript on toggle.
 * Enabled "static" brick to use zafu stored in brick file system.
 * No need to use '&gt;' or '&lt;' in html params. \' escape works. Yeah !!

* Minor changes
 * Fixed label traduction for param.
 * Enable ajax response on Node destroy (use dummy update parameter).
 * Added 'sum' method on array. <===== TODO: Document
 * Added 'loading' option to [filter].
 * Added 'master_template' zafu method to access the master template used for compilation.
 * Fixed creation of modules bug.
 * Using latest QueryBuilder (fixes default scope bug).
 * Added 'ssl_on_auth' option to force https after (and during) login. <=== TODO: Document
 * Removing evaluated strings if copy_id is blank.
 * Exporting relations by class name instead of kpath (may differ from site to site).
 * Using any character to build kpath if no character from the class name can be used.
 * Going through reverse order in console's foreach in case we destroy nodes.
 * Added support for "target" in [zazen] when rendering links.
 * Fixed kpath propagation to relations on kpath change.
 * Fixed [block] in [block] with [filter] bug.
 * Added support for KPATH_VALUE(ClassName) in custom queries. <==== TODO: Document

== 1.2.0, 1.2.1 2012-05-01

* Major changes
 * Added 'remove_from_db' method to remove a site from the database.
 * Fixed asset caching PLEASE FIX YOUR VHOST FILES: rake zena:create_vhost -s host='xxxxx'.
 * Fixed deadlock_retry (a bug in the error message aborted the retry).
 * Created 'spreadsheet' brick to ease xlsx and csv generation. <===== TODO: Document
 * Better JS based grid editor.

* Minor changes
 * Enabled Acl during document upload.
 * Fixed a bug when using [edit] in a list with [add].
 * Fixed 'unknown this' bug in [calendar] when rendering in a [block].